
=======================================================
            WanT code:  Log of Changes 
=======================================================


21 Nov 2008      Bug in the disentanglement restart procedure fixed. (AF)

20 Nov 2008      Bug fixed in util.f90. (AF)

19 Nov 2008      Most of the matrices in workspace_wan.f90 are now allocated
                 in packed form to optimize memory usage. Util.f90 routines
                 updated accordingly. (AF)

18 Nov 2008      Further improvements in parallelism. Menagement of memory in
                 subspace module improved. (AF)

14 Nov 2008      Timing of parallel routines improved. (AF)

07 Nov 2008      Timing module updated to average over pools for well-defined
                 clocks. Overlap_module updated to allow restart with a
                 different number of bands in overlap_read. (AF)

06 Nov 2008      Overlaps and projections are written on a single file also
                 in parallel runs. Bug fixed in restarting (eamp alloc). (AF)

05 Nov 2008      Calls to mp_sum bufferized over kpts. Bug fixed in parallel
                 restarting (subspace_init). (AF)

25 Oct 2008      Inclusion of correlation in transport updated. Test08
                 modified to check correlation effects and shifts in
                 transport. (AF)

24 Oct 2008      Bug fixed (transport calcs) in setting default for overlaps.
                 Bug fix and output updates in memusage.f90. Updates in the
                 management of correlation in transport. (AF)

22 Oct 2008      Little bug fixed in run_AlH.sh and docs/TODO file updated. (AF)

20 Oct 2008      Full implementation of wfc and beta proj buffering is now 
                 properly working and carefully tested. Documentation 
                 updated. (AF)

17 Oct 2008      simple workaround in read_matrix added. (AF)

14 Oct 2008      configure.ac updated from espresso distribution (today's
                 CVS). (AF)
